# Azure-Voice-Language-Lab

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Azure_Voice_Language_Lab.ipynb  CHANGELOG.md  CONTRIBUTING.md  Conheça_o_Colab.ipynb  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: index.md  installation.md  troubleshooting.md  usage.md
examples/: advanced_usage.py  basic_usage.py
src/: __init__.py  cli.py
src/language/: __init__.py  analysis.py  detection.py  translation.py
src/speech/: __init__.py  recognition.py  synthesis.py
src/utils/: __init__.py  config.py  logger.py  validators.py
tests/: __init__.py  conftest.py  test_language.py  test_speech.py  test_utils.py
web/: app.py
